--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,9 @@
     font-weight: 400;
     font-style: normal;
 }
-
+nav{
+    border-bottom: var(--secondary-dark)1px solid;
+}
 .bg-dark{
     background-color: var(--dark)!important;
 }
@@ -94,4 +96,12 @@
 }
 .btn-search:hover{
     color: var(--secondary-dark);
+}
+.img-post{
+    opacity: 1;
+    transition: all 0.3s ease;
+}
+
+.img-post:hover{
+    opacity: 0.8;
 }
